--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,14 @@ html, body {
     margin-top: 20px;
 }
 
+#navbar {
+    position: fixed;
+}
+.social-icons a {
+    font-size: 1.5rem;
+    margin-right: 1rem;
+  }
+
 /*#main-doc header {
     text-align: left;
     margin-bottom: 10px;
